# gadogado

./: .gitignore  README.md  package-lock.json  package.json
src-tauri/: .env.example  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/scripts/: distill-eval.py  distill-train.py  playwright-capture.js  qa-browser-recorder.mjs
src-tauri/src/: app.rs  lib.rs  main.rs
src-tauri/src/application/: enhance_use_case.rs  mod.rs  translate_use_case.rs
src-tauri/src/application/use_cases/: allowlist_validator.rs  audit_service.rs  chunking.rs  context_manager.rs  conversation_service.rs  csv_preprocessor.rs  data_protection.rs  db_connection_manager.rs  embedding_service.rs  enhance.rs  few_shot_prompt_builder.rs  mod.rs  prompt_engine.rs  qa_ai.rs  qa_api_call.rs  qa_event.rs  qa_run.rs  qa_session.rs  query_intent_enricher.rs  rag_analytics.rs  rag_config.rs  rag_ingestion.rs  rag_metrics.rs  rag_validation.rs  rate_limiter.rs  reranker_service.rs  retrieval_service.rs  semantic_matcher.rs  sql_compiler.rs  sql_rag_router.rs  structured_row_schema.rs  table_matcher.rs  template_matcher.rs  translate.rs  typegen.rs  (+1 more)
src-tauri/src/domain/: context_config.rs  error.rs  llm_config.rs  mod.rs  prompt.rs  qa_api_call.rs  qa_checkpoint.rs  qa_event.rs  qa_run.rs  qa_session.rs  rag_entities.rs  typegen.rs
src-tauri/src/infrastructure/: artifact_store.rs  bootstrap.rs  config.rs  config_legacy.rs  mod.rs  response_cleaner.rs  storage.rs
src-tauri/src/interfaces/: http_api.rs  mod.rs  shortcuts.rs  tauri_cmd.rs
src-tauri/src/shared/: mod.rs  token_counter.rs
(+467 files in other folders)
